--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
           <div class="container">
             <div class="gallery-section__inner">
               <div
-                class="gallery-sectioin__title sec-title cont-blk cont-blk--center"
+                class="gallery-section__title sec-title cont-blk cont-blk--center"
               >
                 <h2 class="h2 mb-0">La nostra Gallery</h2>
               </div>
@@ -577,7 +577,7 @@
         <!-- gallery-section-end -->
 
         <!-- testimonial-section -->
-        <section class="testimionial-section">
+        <section class="testimonial-section">
           <div class="container">
             <div class="testimonial-section__inner">
               <div
@@ -592,11 +592,11 @@
                 <div class="testimonial-slide">
                   <div class="testimonial-card">
                     <ul class="rating-ul">
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
                     </ul>
                     <p>
                       Avevo un progetto in testa ed è stato sviluppato alla
@@ -612,11 +612,11 @@
                 <div class="testimonial-slide">
                   <div class="testimonial-card">
                     <ul class="rating-ul">
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
                     </ul>
                     <p>
                       Avevo un progetto in testa ed è stato sviluppato alla
@@ -632,11 +632,11 @@
                 <div class="testimonial-slide">
                   <div class="testimonial-card">
                     <ul class="rating-ul">
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
                     </ul>
                     <p>
                       Avevo un progetto in testa ed è stato sviluppato alla
@@ -652,11 +652,11 @@
                 <div class="testimonial-slide">
                   <div class="testimonial-card">
                     <ul class="rating-ul">
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
                     </ul>
                     <p>
                       Avevo un progetto in testa ed è stato sviluppato alla
@@ -672,11 +672,11 @@
                 <div class="testimonial-slide">
                   <div class="testimonial-card">
                     <ul class="rating-ul">
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
                     </ul>
                     <p>
                       Avevo un progetto in testa ed è stato sviluppato alla
@@ -692,11 +692,11 @@
                 <div class="testimonial-slide">
                   <div class="testimonial-card">
                     <ul class="rating-ul">
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
                     </ul>
                     <p>
                       Avevo un progetto in testa ed è stato sviluppato alla
@@ -712,11 +712,11 @@
                 <div class="testimonial-slide">
                   <div class="testimonial-card">
                     <ul class="rating-ul">
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
-                      <li class="active"><i class="fab fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
+                      <li class="active"><i class="fas fa-star"></i></li>
                     </ul>
                     <p>
                       Avevo un progetto in testa ed è stato sviluppato alla
