--- a/index.html
+++ b/index.html
@@ -823,7 +823,7 @@
                         </div>
                       </div>
                       <div class="col-12">
-                        <div class="single-input-x">
+                        <div class="single-input-x mb-3">
                           <div class="input-x-outer">
                             <textarea
                               class="input-x"
@@ -833,12 +833,17 @@
                         </div>
                       </div>
                       <div class="col-12">
-                        <div class="single-input-x">
+                        <div class="single-input-x mb-3">
                           <label class="check-label-x">
                             <input
                               type="checkbox"
                               class="checkbox checkbox-model"
                             />
+                            <span class="txt"
+                              >Acconsento al trattamento dei dati a norma del
+                              <br class="d-md-block d-none" />
+                              Regolamento UE 2016/679. Informativa completa *
+                            </span>
                           </label>
                         </div>
                       </div>
@@ -847,7 +852,7 @@
                           <div class="input-x-outer">
                             <input
                               type="submit"
-                              class="input-x input-x-submti"
+                              class="input-x input-x-submit"
                               value="INVIA MESSAGGIO"
                             />
                           </div>
@@ -874,8 +879,8 @@
             <ul class="footer-menu">
               <li>
                 <a href="#"
-                  >© Lavanda di Castello- 2023 - P. IVA 00000000000 | Designed
-                  by Kraken Studio
+                  >© Lavanda di Castello- 2023 - P. IVA 00000000000 |
+                  <span class="fw-700">Designed by Kraken Studio</span>
                 </a>
               </li>
               <li>
