--- a/index.html
+++ b/index.html
@@ -961,10 +961,12 @@
               <li>
                 <a href="#"
                   >© Lavanda di Castello- 2023 - P. IVA 00000000000 |
+                  <br class="d-md-none" />
+                  <br class="d-md-none" />
                   <span class="fw-700">Designed by Kraken Studio</span>
                 </a>
               </li>
-              <li>
+              <li class="order-md-0 order-first">
                 <a href="#"
                   >Via Coronella, 11 - Castello di Vigarano Mainarda, Ferrara</a
                 >
