--- a/index.html
+++ b/index.html
@@ -415,7 +415,9 @@
                 <h2 class="h2 mb-0">Perché Lavanda di Castello</h2>
               </div>
 
-              <div class="why-cards-row row gy-4">
+              <div
+                class="why-cards-row why-slider-mobile-active owl-carousel slider-dots-1 row gy-md-4"
+              >
                 <div class="col-lg-3 col-md-6">
                   <div class="why-card">
                     <div class="why-card__image">
